# buzz-hc

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  setup-dev.sh
.agent_process/: .gitignore  README.md  quality-config.json
.agent_process/claude/: commands.md
.agent_process/knowledge/: anti-patterns.jsonl  api-behaviors.jsonl  codebase-facts.jsonl  decisions.jsonl  gotchas.jsonl  patterns.jsonl
.agent_process/orchestration/: plan-scope.md  review-iteration.md  scope-sizing-rules.md
.agent_process/process/: ap_release_central_sync.md  artifact-evaluation.md  code-feasibility-review.md  design-review-gate.md  documentation-checklist.md  github-issues-handling.md  github-issues-integration.md  knowledge-base.md  local_environment_instructions.md  metaswarm-integration.md  naming_conventions.md  personality-adaptation.md  pr-shepherd.md  quality-configuration.md  removal-scope-checklist.md  roadmap_schema.md  roadmap_update.md  scope-breakdown.md  scope-sizing-check.md  validation-playbook.md  work-unit-execution.md
.agent_process/roadmap/: .roadmap_config.json  backlog.md  master_roadmap.md
.agent_process/scripts/: analyze-validation-scripts.sh  (+9 more)
api/: database.py  db_sessions.py  main.py  migrate.py  stream.py
app/: __init__.py  cli_resume.py  context.py  export_pdf.py  history.py  llm.py  scenarios.py  schema.py  startup.py  ui.py
data/: sessions.db
tests/: conftest.py  test_api_run.py  test_api_sessions.py  test_db_sessions.py  test_pipeline_stages.py  test_reporter_streaming.py  test_schema.py
web/: package.json  pnpm-lock.yaml
(+183 files in other folders)
