[project]
name = "buzz-hc"
version = "0.1.0"
description = "Multi-agent pharma market research tool using PydanticAI"
readme = "README.md"
authors = [
    { name = "JamesSexton", email = "jdsexton96@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai>=1.57",
    "pydantic>=2",
    "Crawl4AI>=0.8",
    "tavily-python>=0.5",
    "pytrials>=0.2",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "streamlit>=1.31",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
