[project]
name = "buzz-hc"
version = "0.1.0"
description = "Multi-agent pharma market research tool using PydanticAI"
readme = "README.md"
authors = [
    { name = "JamesSexton", email = "jdsexton96@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai>=1.57",
    "pydantic>=2",
    "Crawl4AI>=0.8",
    "tavily-python>=0.5",
    "pytrials>=0.2",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "streamlit>=1.31",
    "weasyprint>=62",
    "markdown>=3.5",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
